--- a/HAMS/app/src/main/AndroidManifest.xml
+++ b/HAMS/app/src/main/AndroidManifest.xml
@@ -15,16 +15,16 @@
         android:theme="@style/Theme.Material3.Dark"
         tools:targetApi="31" >
         <activity
-            android:name=".InfoForm"
+            android:name=".UI.InfoForm"
             android:exported="false"
             android:label="@string/title_activity_info_form"
             android:theme="@style/Theme.Material3.Dark.NoActionBar" />
         <activity
-            android:name=".Register"
+            android:name=".UI.Register"
             android:exported="false"
             android:theme="@style/Theme.Material3.Dark.NoActionBar" />
         <activity
-            android:name=".Login"
+            android:name=".UI.Login"
             android:exported="true"
             android:theme="@style/Theme.Material3.Dark.NoActionBar" >
             <intent-filter>
@@ -34,7 +34,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".UI.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Material3.Dark.NoActionBar" >
         </activity>
