--- a/HAMS/app/src/main/AndroidManifest.xml
+++ b/HAMS/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.seg2105.hams">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,35 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.Dark"
-        tools:targetApi="31" >
-        <activity
-            android:name=".UI.InfoForm"
-            android:exported="false"
-            android:label="@string/title_activity_info_form"
-            android:theme="@style/Theme.Material3.Dark.NoActionBar" />
-        <activity
-            android:name=".UI.Register"
-            android:exported="false"
-            android:theme="@style/Theme.Material3.Dark.NoActionBar" />
-        <activity
-            android:name=".UI.Login"
-            android:exported="true"
-            android:theme="@style/Theme.Material3.Dark.NoActionBar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        tools:targetApi="31">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".UI.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Material3.Dark.NoActionBar" >
+            android:theme="@style/Theme.Material3.Dark.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
